# logictools

./: .coverage  .gitignore  License  README.md  coverage.xml  pyproject.toml
.github/workflows/: publish.yml
logictools/: __init__.py  math_utils.py
tests/: test_math_utils.py  test_string_utils.py
