[project]
name = "logictools"
version = "0.1.9"
description = "A simple utility package for string and math functions"
authors = [
    { name = "PAVANSAI RANGDAL", email = "pavansai.20066@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.25.0",
    "numpy>=1.21.0"
]

# PEP 621 format (for standard tools)
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=6.1.1"
]

# Poetry-specific format (for poetry commands)
[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-cov = ">=6.1.1"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=logictools --cov-report=xml"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"