[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "logictools"
version = "0.1.13"
description = "A simple utility package for string and math functions"
authors = [
    {name = "PAVANSAI RANGDAL", email = "pavansai.20066@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["utilities", "string", "math", "toolkit"]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.25.0",
    "numpy>=1.21.0"
]

[project.urls]
Homepage = "https://github.com/Pavansai20054/logictools"
Repository = "https://github.com/Pavansai20054/logictools"

[tool.poetry]
packages = [{ include = "logictools" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-cov = ">=6.1.1"
black = "^25.1.0"
flake8 = "^7.2.0"
mypy = "^1.15.0"
pre-commit = "^4.2.0"
pytest-watch = "^4.2.0"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=logictools --cov-report=term --cov-report=xml --cov-fail-under=80"
